<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.shray.myapplication.ui.ContactUs">

    <TextView
        android:id="@+id/followUsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_twenty_four"
        android:text="@string/follow_us"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/followUs2TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/followUsTV"
        android:layout_centerHorizontal="true"
        android:text="@string/follo_us_quote"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/followUs2TV"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:background="@drawable/shape_top"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape_side"
                android:src="@drawable/ic_googlepluscontact" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_facebookcontact" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape_side"
                android:src="@drawable/ic_twittercontact" />
        </android.support.v7.widget.CardView>

    </LinearLayout>


    <TextView
        android:id="@+id/dummyTextTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:text="@string/say_hello"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/dummyText2TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dummyTextTV"
        android:layout_centerHorizontal="true"
        android:text="@string/sample_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailET"
        android:layout_below="@+id/dummyText2TV"
        android:layout_marginTop="@dimen/margin_top"
        style="@style/widgets">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/font_size" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/popUpTV"
        android:layout_below="@+id/emailET"
        android:layout_marginTop="@dimen/margin_eight"
        style="@style/widgets"
        android:hint="@string/subject_hint"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contentET"
        android:layout_below="@+id/popUpTV"
        android:layout_above="@+id/sendBtn"
        android:layout_marginTop="@dimen/margin_top"
        style="@style/widgets">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/content_hint"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sendBtn"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:layout_alignParentBottom="true"
        android:background="@color/green"
        android:text="@string/send_btn"
        style="@style/widgets"/>

</RelativeLayout>

